[Wen Hao] - update tasks.