@@ -1,15 +1,14 @@
 package com.github.wenhao.tdd.pos.parser;
 
+import com.google.common.io.Resources;
+
 import java.io.IOException;
 import java.net.URL;
 import java.nio.charset.Charset;
 import java.util.List;
+import java.util.stream.Collectors;
 
-import static com.google.common.collect.FluentIterable.from;
 import static com.google.common.collect.Lists.newArrayList;
-
-import com.google.common.base.Function;
-import com.google.common.io.Resources;
 
 public abstract class Parser<T>
 {
@@ -19,15 +18,7 @@ public abstract class Parser<T>
         URL url = Resources.getResource(name);
         try {
             List<String> lines = Resources.readLines(url, Charset.defaultCharset());
-            return from(lines).transform(new Function<String, T>()
-            {
-                @Override
-                public T apply(String line)
-                {
-                    return convert(line);
-                }
-            }).toList();
-
+            return lines.stream().map(line -> convert(line)).collect(Collectors.toList());
         } catch (IOException e) {
             e.printStackTrace();
         }
